Fixed deprecations